# pg_extension

./: .clang-format  .gitignore  .rsync-filter  CMakeLists.txt  README.md  funcs--1.0.sql  init-server.sh.in  stop-server.sh.in
.github/workflows/: build.yml
cmake/: FindPostgreSQL.cmake
src/: CMakeLists.txt  funcs.cc
src/pgext/: CMakeLists.txt  README.md  array.h  cpostgres  function.h  list.h  scalar.h  test_array.cpp  test_function.cpp  test_list.cpp  test_scalar.cpp
src/pgext/sql/: array.sql
src/pgtest/: CMakeLists.txt
src/quaternion/: CMakeLists.txt  quaternion--1.0.sql  quaternion.c  quaternion.h
src/quaternion/expected/: basic.out
src/quaternion/sql/: basic.sql
